Updated faculty urls

--- a/faculty.html
+++ b/faculty.html
@@ -98,7 +98,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
         
 
-               <img src="./resources/images/ella.png" alt="faculty"/>
+               <img src="./resources/images/ella2.png" alt="faculty"/>
 
               <h1>Ella McDonald</h1>
 
@@ -112,7 +112,7 @@
 		<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
 		
 
-               <img src="./resources/images/ann.png" alt="faculty"/>
+               <img src="./resources/images/ann2.png" alt="faculty"/>
 
               <h1>Ann Wade</h1>
 
@@ -130,7 +130,7 @@
  <div class="row">
 
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
-		<img src="./resources/images/gary.png" alt="faculty"/>
+		<img src="./resources/images/gary2.png" alt="faculty"/>
 
               <h1>Gary Rivera</h1>
 
@@ -155,7 +155,7 @@
 
 	<div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
 
-               <img src="./resources/images/noah.png" alt="faculty"/>
+               <img src="./resources/images/noah2.png" alt="faculty"/>
 
               <h1>Noah Craig</h1>
 
@@ -171,7 +171,7 @@
 	 <div class="row">
 
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
-		<img src="./resources/images/luella.png" alt="faculty"/>
+		<img src="./resources/images/luella2.png" alt="faculty"/>
 
               <h1>Luella Pierce</h1>
 
@@ -183,7 +183,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 center desaturate">
 
-               <img src="./resources/images/eva.png" alt="faculty"/>
+               <img src="./resources/images/eva2.png" alt="faculty"/>
 
               <h1>Eva Shelton</h1>
 
